# claude-clode-cloud

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LAUNCH.md  LAUNCH_SUMMARY.txt  LICENSE  Makefile  PROJECT_STATUS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: bedrock.config.yaml
.cursor-agent/: README.md  config.yaml  setup-and-launch.sh
.github/: dependabot.yml
.github/workflows/: docker.yml  security.yml  terraform.yml  test.yml
docs/: AUTHENTICATION_METHODS.md  AWS_INFRASTRUCTURE_SETUP.md  CI_CD.md  CLAUDE_CODE_CONFIGURATION.md  CURSOR_INTEGRATION.md  DOCKER.md
docs/en/: api.md  authentication.md  configuration.md  cursor-integration.md  monitoring.md
examples/: example_usage.py
linear-automation/: graphql-queries.graphql
scripts/: aws-bedrock-setup.sh  test-auth-methods.sh  test-claude-bedrock.sh
scripts/deployment/: deploy.sh
scripts/setup/: configure-bedrock.sh
scripts/validation/: test-bedrock-connection.sh  verify-config.sh
src/: __init__.py
src/auth/: __init__.py  aws_auth.py
src/gateway/: __init__.py  auth-manager.ts  bedrock-proxy.ts  llm-gateway.ts  main.py  server.py
src/linear_integration/: __init__.py  client.py
src/monitoring/: __init__.py  tracker.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/dev/: terraform.tfvars
terraform/environments/prod/: terraform.tfvars
tests/: __init__.py
tests/unit/: test_auth.py
